<resources>
    <string name="app_name">Blackjack</string>
    <string name="btn_card">Another Card</string>
    <string name="btn_stop">No More Card</string>
    <string name="btn_reset">Reset</string>
    <string name="menu_settings">Settings</string>
    <string name="txt_bank">Bank</string>
    <string name="txt_bank_best">Bank Best : {}</string>
    <string name="txt_player">Player</string>
    <string name="txt_player_best">Player Best : {}</string>
    <string name="txt_balance">{}$</string>
    <string name="txt_bet">Your bet : 150$</string>
    <string name="txt_btn_bet">Bet</string>
    <string name="txt_dialog_title">Settings blackjack</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_background_green">Background green</string>
    <string name="txt_background_black">Background black</string>
    <string name="txt_number_of_decks">Number of decks</string>
    <string name="txt_initial_balance">Initial balance</string>
    <string name="txt_player_name">Player\'s name</string>
    <string name="player">Player</string>
    <string name="txt_money_out">"Not enough money "</string>
    <string name="txt_landscape">Landscape</string>
    <string name="txt_portrait">Portrait</string>
</resources>