<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/diag_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ems="10"
        android:hint="@string/txt_player_name"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/diag_deck_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ems="10"
        android:hint="@string/txt_number_of_decks"
        android:importantForAutofill="no"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/diag_init_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ems="10"
        android:hint="@string/txt_initial_balance"
        android:importantForAutofill="no"
        android:inputType="numberSigned" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/diag_back_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/txt_background_green" />

        <RadioButton
            android:id="@+id/diag_back_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_background_black" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/diag_locale_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/flag_french" />

        <RadioButton
            android:id="@+id/diag_locale_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/flag_english" />
    </RadioGroup>

</LinearLayout>